--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "@openzeppelin/contracts": "^5.3.0",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
     "hardhat": "^2.24.0"
+  },
+  "dependencies": {
+    "@ethersproject/solidity": "^5.8.0"
   }
 }
